<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <TextView
        android:id="@+id/item_devices_title"
        android:layout_width="185dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="25dp"
        android:text="@string/item_devices_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_device_key"
        android:layout_width="205dp"
        android:layout_height="27.5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/item_device_key_placeholder"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_devices_os"
        app:layout_constraintStart_toStartOf="@+id/item_devices_title"
        app:layout_constraintTop_toBottomOf="@+id/item_devices_title"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/item_devices_os"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/logo_android"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_devices_edit"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/item_devices_os_desc" />

    <ImageView
        android:id="@+id/item_devices_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_edit"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_devices_delete"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/item_devices_edit_desc" />

    <ImageView
        android:id="@+id/item_devices_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/item_devices_delete_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>