<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountRegister">

    <TextView
        android:id="@+id/account_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/odin_rounded_bold"
        android:text="@string/account_register_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/account_register_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/account_register_name_placeholder"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register_title" />

    <EditText
        android:id="@+id/account_register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/account_register_e_mail_address_placeholder"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register_name_input" />

    <EditText
        android:id="@+id/account_register_age_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/account_register_age_placeholder"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register_email_input" />

    <EditText
        android:id="@+id/account_register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/account_register_password_placeholder"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register_age_input" />

    <TextView
        android:id="@+id/account_register_register_button"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:background="@drawable/account_login_login_button_background"
        android:paddingVertical="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/account_register_register_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register_password_input" />

    <TextView
        android:id="@+id/account_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_register_login"
        app:layout_constraintEnd_toEndOf="@+id/account_register_register_button"
        app:layout_constraintTop_toBottomOf="@+id/account_register_register_button"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"/>

    <ProgressBar
        android:id="@+id/account_register_progressbar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:indeterminateTint="#BF272937"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_register_register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>