<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountLogin">

    <TextView
        android:id="@+id/account_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/odin_rounded_bold"
        android:text="@string/account_login_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/account_login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_login_e_mail_address_placeholder"
        android:textSize="24sp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_login_title"
        android:layout_marginTop="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/account_login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_login_password_placeholder"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_login_email_input"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/account_login_login_button"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/account_login_login_button_background"
        android:paddingVertical="15dp"
        android:text="@string/account_login_login_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_login_password_input" />

    <TextView
        android:id="@+id/account_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_login_forgot_password"
        android:textColor="#E6454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12.5dp" />

    <TextView
        android:id="@+id/account_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_login_register"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@+id/account_login_login_button"
        app:layout_constraintTop_toBottomOf="@+id/account_login_login_button" />

    <ProgressBar
        android:id="@+id/account_login_progressbar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_login_login_button"
        android:indeterminateTint="#BF272937"/>

</androidx.constraintlayout.widget.ConstraintLayout>