<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountResetPassword">

    <TextView
        android:id="@+id/account_reset_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/odin_rounded_bold"
        android:text="@string/account_reset_password_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/account_reset_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_login_e_mail_address_placeholder"
        android:textSize="24sp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_reset_title"
        android:layout_marginTop="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/account_reset_confirm_button"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/account_login_login_button_background"
        android:paddingVertical="15dp"
        android:text="@string/account_reset_confirm_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_reset_email_input" />

<!--    Note text   -->
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/account_reset_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/account_reset_progressbar"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:indeterminateTint="#BF272937"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_reset_confirm_button" />
</androidx.constraintlayout.widget.ConstraintLayout>