<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Devices">

    <ImageView
        android:id="@+id/device_list_goBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/device_list_goBack"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device_list_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:fontFamily="@font/odin_rounded_bold"
        android:text="@string/device_list_title"
        android:textAlignment="center"
        android:textColor="#E6000000"
        android:textSize="25sp"
        android:layout_marginStart="17.5dp"
        app:layout_constraintBottom_toBottomOf="@+id/device_list_goBack"
        app:layout_constraintStart_toEndOf="@+id/device_list_goBack"
        app:layout_constraintTop_toTopOf="@+id/device_list_goBack" />

    <ImageView
        android:id="@+id/device_list_add"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_add"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/device_list_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/device_list_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/device_list_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_list_title" />

    <TextView
        android:id="@+id/device_list_empty_list_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_list_empty_list_txt"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>